--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -1,21 +1,21 @@
 .promo {
-    background-color: #F5F5F5;
-    border-radius: 10px;
-    margin: 20px 40px 0px 40px;
-    padding: 160px 235px 30px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    min-height: 100%;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  margin: 20px 40px 0px 40px;
+  padding: 160px 235px 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100%;
 }
 
 .promo__header {
-    font-size: 50px;
-    line-height: 58px;
-    font-weight: 400;
-    color: black;
-    text-align: center;
-    margin: auto;
+  font-size: 50px;
+  line-height: 58px;
+  font-weight: 400;
+  color: black;
+  text-align: center;
+  margin: auto;
 }
