--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -51,6 +51,8 @@
   justify-content: center;
   align-items: center;
   margin-right: 10px;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 .techs__list-el:last-of-type {
