--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -33,10 +33,10 @@
   text-align: center;
   border: none;
   background-color: #e8e8e8;
-  transition: opacity 0.3s linear;
+  transition: background-color 0.3s linear;
 }
 
 .nav-button:hover {
   cursor: pointer;
-  opacity: 0.7;
+  background-color: #2be080;
 }
