feat: Search form component added, fixed page width

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,6 +17,7 @@
 
 .page__container {
   margin: 0, auto;
+  width: 100%;
   min-width: 320px;
   max-width: 1280px;
 }
@@ -25,4 +26,5 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  border: 1px solid blue;
 }
