feat: MoviesCardList component and MoviesCard component added

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,3 +1,25 @@
 .movies {
   padding: 80px 70px;
+  display: flex;
+  flex-direction: column;
+}
+
+.movies__more-button {
+  width: 320px;
+  height: 36px;
+  align-content: center;
+  border-radius: 3px;
+  background-color: white;
+  color: black;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  border: 1px solid #e8e8e8;
+  margin: 50px auto 0;
+  transition: opacity 0.3s linear;
+}
+
+.movies__more-button:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
