--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,8 @@
 .page {
   background-color: white;
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
   margin: 0;
@@ -20,10 +22,13 @@
   width: 100%;
   min-width: 320px;
   max-width: 1280px;
+  min-height: 100vh;
 }
 
 .App {
   display: flex;
   flex-direction: column;
+  flex: 1;
   margin: 0;
+  min-height: 100vh;
 }
