--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,9 +1,10 @@
 .filter-checkbox {
   background: white;
-  padding: 30px 0 0;
+  padding: 30px 0 39px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .filter-checkbox__container {
