feat: header link to profile added

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,7 @@
   margin-left: 44px;
 }
 .header__auth-container {
+  display: none;
 }
 
 .header__auth-button {
@@ -50,4 +51,40 @@
 .header__nav-link:hover {
   cursor: pointer;
   font-weight: 500;
+}
+
+.header__profile {
+  width: 100px;
+  height: 32px;
+  border-radius: 40px;
+  box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 12px;
+  text-decoration: none;
+  color: black;
+  transition: opacity 0.3s linear;
+  margin: 0;
+  padding: 0;
+}
+
+.header__profile:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.header__profile-icon {
+  border-radius: 50px;
+  background-color: #f9f9f9;
+  width: 24px;
+  height: 24px;
+  margin-left: 7px;
+  background-image: url(../../images/profile-icon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
