fix: Header and Footer moved inside the pages

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,8 +1,11 @@
 .movies {
+  display: none;
+}
+
+.movies-container {
   padding: 80px 70px;
   display: flex;
   flex-direction: column;
-  display: none;
 }
 
 .movies__more-button {
