--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,10 +1,13 @@
 .profile {
+  display: none;
+}
+
+.profile-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 74px 0 70px;
-  display: none;
 }
 
 .profile__greeting {
