--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,7 +1,6 @@
-.login {
+.register {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 70px;
-  display: none;
 }
