--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -7,4 +7,10 @@
   height: 38px;
   margin: 0;
   padding: 0;
+  transition: opacity 0.3s linear;
+}
+
+.logo:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
