--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   min-height: 74px;
   margin: 0;
   padding: 18px 70px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,12 +12,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  width: 100%;
 }
 .header__nav-films {
-  margin-left: 44px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .header__auth-container {
-  display: none;
 }
 
 .header__auth-button {
@@ -45,7 +49,13 @@
   font-weight: normal;
   line-height: 18px;
   transition: font-weight 0.3 linear;
-  margin: 0 16px 0 0;
+  margin: 0 16px 0 44px;
+  text-decoration: none;
+  color: black;
+}
+
+.header__nav-link:last-of-type {
+  margin: 0;
 }
 
 .header__nav-link:hover {
