refactor: NavTab anchors to page components added

--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -1,42 +1,33 @@
 .nav {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   margin: 151px auto 0;
   align-self: flex-end;
-  position: sticky;
   width: 100%;
 }
 
-.nav-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.list-el {
-  display: inline;
-  margin: 0 10px 0 0;
-  padding: 0;
-}
-.list-el:last-of-type {
-  margin: 0;
-}
-
-.nav-button {
-  margin: 0;
-  padding: 10px auto;
+.nav-link {
+  margin-left: 10px;
+  padding: 10px 0;
   width: 96px;
-  height: 36px;
-  border-radius: 10px;
   font-size: 12px;
   line-height: 16px;
+  text-decoration: none;
+  color: black;
+  background-color: #e8e8e8;
   text-align: center;
   border: none;
-  background-color: #e8e8e8;
+  display: inline-block;
+  border-radius: 10px;
   transition: background-color 0.3s linear;
 }
 
-.nav-button:hover {
+.nav-link:hover {
   cursor: pointer;
   background-color: #2be080;
+}
+
+.nav-link:first-of-type {
+  margin-left: 0;
 }
