--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -4,3 +4,9 @@
   align-items: center;
   padding-top: 70px;
 }
+
+@media screen and (max-width: 454px) {
+  .register {
+    padding: 56px 30px 30px;
+  }
+}
