feat: Main component responsive for smaller screens added

--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .techs__title {
@@ -32,11 +33,12 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  padding: 0 0 100px;
+  padding: 0 0 90px;
 }
 
 .techs__list {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
@@ -50,11 +52,56 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 10px;
+  margin: 10px 10px 0 0;
   font-size: 14px;
   line-height: 17px;
 }
 
 .techs__list-el:last-of-type {
   margin-right: 0;
+}
+
+@media screen and (max-width: 1007px) {
+  .techs {
+    padding: 90px 50px;
+    letter-spacing: -0.04em;
+  }
+  .techs__content-title {
+    padding: 80px 0 22px;
+  }
+  .techs__content {
+    font-size: 12px;
+    line-height: 18px;
+    padding-bottom: 73px;
+  }
+
+  .techs__list-el {
+    line-height: 15px;
+    width: 84px;
+    height: 57px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .techs {
+    padding: 70px 18px;
+  }
+  .techs__title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+  }
+  .techs__content-title {
+    font-size: 30px;
+    line-height: 36px;
+    padding: 60px 0 24px;
+  }
+  .techs__content {
+    font-size: 11px;
+    line-height: 16px;
+    padding-bottom: 50px;
+  }
+  .techs__list-el {
+    font-size: 12px;
+  }
 }
