--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -35,6 +35,7 @@
   line-height: 22px;
   padding: 0 0 99px;
   margin: 0;
+  max-width: 600px;
 }
 
 .about-me__flex-container {
@@ -46,7 +47,7 @@
 
 .about-me__photo {
   height: 327px;
-  width: 270px;
+  min-width: 270px;
   margin: 0;
   border-radius: 10px;
   background-image: url(../../../images/IMG_9403.JPG);
@@ -63,7 +64,7 @@
 .about-me__socials-link {
   text-decoration: none;
   color: inherit;
-  line-height: 16.94px;
+  line-height: 17px;
   font-size: 14px;
   font-weight: 500;
   margin-right: 20px;
@@ -77,4 +78,84 @@
 
 .about-me__socials-link:last-of-type {
   margin-right: 0;
+}
+
+@media screen and (max-width: 1007px) {
+  .about-me {
+    padding: 90px 50px;
+  }
+  .about-me__title {
+    letter-spacing: -0.04em;
+  }
+
+  .about-me__content-title {
+    font-size: 40px;
+    line-height: 40px;
+    padding-bottom: 16px;
+  }
+
+  .about-me__content-subtitle {
+    font-size: 12px;
+    line-height: 18px;
+    padding-bottom: 20px;
+  }
+  .about-me__text {
+    padding-right: 49px;
+  }
+  .about-me__content {
+    font-size: 12px;
+    line-height: 18px;
+    padding-bottom: 87px;
+    max-width: 364px;
+  }
+
+  .about-me__photo {
+    min-width: 255px;
+    height: 307px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .about-me {
+    padding: 70px 14px;
+  }
+  .about-me__title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+  }
+  .about-me__photo {
+    height: 352px;
+    width: 292px;
+  }
+  .about-me__flex-container {
+    flex-direction: column-reverse;
+    padding-top: 60px;
+  }
+  .about-me__content-title {
+    padding: 40px 0 20px;
+    font-size: 30px;
+    line-height: 36px;
+    letter-spacing: -0.04em;
+  }
+
+  .about-me__content-subtitle {
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .about-me__content {
+    font-size: 11px;
+    line-height: 16px;
+    padding-bottom: 40px;
+  }
+
+  .about-me__socials-link {
+    margin-right: 26px;
+  }
+  .about-me__text {
+    padding: 0;
+  }
+  .about-me__content {
+    width: 100%;
+  }
 }
