--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -17,14 +17,17 @@
   margin: 0 auto;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .about-project__table-cell {
-  margin: 0;
+  margin: 0 0 0 30px;
   padding: 0;
   max-width: 550px;
+}
+
+.about-project__table-cell:first-of-type {
+  margin-left: 0;
 }
 
 .about-project__content-title {
@@ -81,4 +84,76 @@
   line-height: 17px;
   font-weight: 500;
   color: #a0a0a0;
+}
+
+@media screen and (max-width: 1007px) {
+  .about-project {
+    padding: 90px 50px;
+  }
+  .about-project__title {
+    letter-spacing: -0.04em;
+  }
+  .about-project__content-title {
+    letter-spacing: -0.04em;
+  }
+  .about-project__table-cell {
+    display: inline;
+    max-width: 319px;
+  }
+  .about-project__content {
+    margin: 22px 30px 0 0;
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .about-project__content:last-of-type {
+    margin-right: 0;
+  }
+  .about-project__timeline {
+    margin-top: 93px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .about-project {
+    padding: 70px 18px;
+  }
+  .about-project__title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+    margin-bottom: 4px;
+  }
+  .about-project__content-title {
+    padding-top: 56px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .about-project__table {
+    width: 100%;
+    display: block;
+  }
+  .about-project__table-cell {
+    max-width: 100%;
+  }
+  .about-project__content {
+    margin-top: 16px;
+  }
+  .about-project__timeline {
+    margin-top: 60px;
+    height: 35px;
+  }
+  .about-project__timeline-label {
+    font-size: 11px;
+    line-height: 13px;
+  }
+  .about-project__timeline-caption {
+    padding-top: 10px;
+  }
+  .about-project__timeline-20 {
+    width: 100px;
+  }
+  .about-project__timeline-caption-text {
+    font-size: 11px;
+    line-height: 13px;
+  }
 }
