--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -31,3 +31,23 @@
 .nav-link:first-of-type {
   margin-left: 0;
 }
+
+@media screen and (max-width: 1007px) {
+  .nav {
+    margin-top: 314px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .nav {
+    margin-top: 212px;
+  }
+  .nav-link {
+    padding: 5px 0;
+    font-size: 10px;
+    line-height: 16px;
+    width: 82px;
+    border-radius: 6px;
+    margin-left: 6px;
+  }
+}
