--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -49,3 +49,35 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 1007px) {
+  .portfolio {
+    padding: 0 50px 90px;
+  }
+  .portfolio__project-name {
+    font-size: 28px;
+    letter-spacing: -0.04em;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .portfolio {
+    padding: 0 15px 70px;
+  }
+
+  .portfolio-title {
+    font-size: 14px;
+    margin-bottom: 40px;
+  }
+
+  .portfolio__project-name {
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.04em;
+  }
+
+  .portfolio__link-icon {
+    width: 18px;
+    height: 28px;
+  }
+}
