--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -1,7 +1,7 @@
 .promo {
   background-color: #f5f5f5;
   border-radius: 10px;
-  margin: 20px 40px 0px 40px;
+  margin: 20px 40px 0 40px;
   padding: 160px 235px 30px;
   height: 100%;
   display: flex;
@@ -18,4 +18,27 @@
   color: black;
   text-align: center;
   margin: auto;
+}
+
+@media screen and (max-width: 1007px) {
+  .promo {
+    margin: 20px 20px 0;
+    padding: 350px 24px 30px;
+  }
+  .promo__header {
+    font-size: 40px;
+    line-height: 52px;
+    letter-spacing: -0.04em;
+  }
+}
+@media screen and (max-width: 640px) {
+  .promo {
+    margin: 14px 14px 0;
+    padding: 220px 0 17px;
+  }
+
+  .promo__header {
+    font-size: 29px;
+    line-height: 37px;
+  }
 }
