feat: save card button fixed, added responsive screens

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,4 +1,5 @@
 .movies {
+  box-sizing: border-box;
 }
 
 .movies-container {
@@ -25,4 +26,16 @@
 .movies__more-button:hover {
   cursor: pointer;
   opacity: 0.6;
+}
+
+@media screen and (max-width: 1004px) {
+  .movies-container {
+    padding: 80px 30px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .movies-container {
+    padding: 0 10px;
+  }
 }
