--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,17 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  box-sizing: border-box;
 }
 .search-form__container {
   margin: auto;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .search-form__input {
-  width: 100%;
   outline: none;
   border-radius: 4px;
   border: none;
@@ -20,6 +20,7 @@
   padding: 15px 22px;
   font-size: 14px;
   line-height: 18px;
+  width: 100%;
 }
 
 .search-form__input:focus {
@@ -29,7 +30,7 @@
 .search-form__button {
   background-color: #2be080;
   border-radius: 40px;
-  width: 70px;
+  min-width: 70px;
   height: 44px;
   text-align: center;
   color: white;
@@ -44,4 +45,7 @@
 .search-form__button:hover {
   opacity: 0.7;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1004px) {
 }
