--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -100,6 +100,24 @@
 }
 
 @media screen and (max-width: 640px) {
+  .card {
+    width: 300px;
+  }
+  .card__img {
+    width: 300px;
+    height: 168px;
+  }
+  .card__caption {
+    padding-top: 16px;
+  }
+  .card__title {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .card__save-button {
+    left: 218px;
+  }
+
   .card__saved-icon {
     top: 10px;
     left: 269px;
