--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -47,5 +47,8 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 1004px) {
+@media screen and (max-width: 640px) {
+  .search-form__input {
+    font-size: 12px;
+  }
 }
