--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -65,6 +65,10 @@
   display: block;
 }
 
+.card__save-button_disabled {
+  display: none;
+}
+
 .card__save-button:hover {
   cursor: pointer;
   opacity: 0.6;
@@ -80,6 +84,9 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.card__saved-icon_disabled {
   display: none;
 }
 
