feat: card delete button added

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -75,7 +75,7 @@
 }
 
 .card__save-button_saved {
-  background-image: url(../../images//saved-icon.svg);
+  background-image: url(../../images/saved-icon.svg);
   width: 21px;
   height: 21px;
   position: absolute;
@@ -97,6 +97,30 @@
   opacity: 0.7;
 }
 
+.card__delete-button {
+  background-image: url(../../images/delete-btn.svg);
+  width: 21px;
+  height: 21px;
+  position: absolute;
+  top: 14px;
+  left: 325px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  background-color: transparent;
+  border-radius: 50%;
+  padding: 0;
+  margin: 0;
+  transition: transform opacity 0.3s linear;
+}
+
+.card__delete-button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  transform: rotate(-75deg);
+}
+
 @media screen and (max-width: 1004px) {
   .card__img {
     width: 339px;
@@ -109,6 +133,9 @@
     left: 253px;
   }
   .card__save-button_saved {
+    left: 304px;
+  }
+  .card__delete-button {
     left: 304px;
   }
 }
@@ -133,6 +160,11 @@
   }
 
   .card__save-button_saved {
+    top: 10px;
+    left: 269px;
+  }
+
+  .card__delete-button {
     top: 10px;
     left: 269px;
   }
