--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -20,7 +20,7 @@
   margin: 5px auto 0;
 }
 
-.not-found__link {
+.not-found__button {
   text-decoration: none;
   color: #2be080;
   font-size: 14px;
@@ -28,9 +28,12 @@
   font-weight: 400;
   margin: 184px auto 0;
   transition: opacity 0.3s linear;
+  background-color: transparent;
+  outline: none;
+  border: none;
 }
 
-.not-found__link:hover {
+.not-found__button:hover {
   cursor: pointer;
   opacity: 0.6;
 }
@@ -46,7 +49,7 @@
     line-height: 15px;
     margin: 10px auto 0;
   }
-  .not-found__link {
+  .not-found__button {
     font-size: 12px;
     line-height: 15px;
   }
