feat: search form empty input validation added

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,9 +1,11 @@
 .search-form {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   box-sizing: border-box;
 }
+
 .search-form__container {
   margin: auto;
   width: 100%;
@@ -25,6 +27,14 @@
 
 .search-form__input:focus {
   border-bottom: #2be080 1px solid;
+}
+
+.search-form__input-error {
+  color: #ee3465;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 12px;
+  margin: 6px 0 0;
 }
 
 .search-form__button {
