--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -9,10 +9,18 @@
   cursor: pointer;
 }
 
-.card__img {
+.card__img-container {
   width: 360px;
   height: 201px;
   border-radius: 6px;
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  /* width: 360px;
+  height: 201px;
+  border-radius: 6px; */
   margin: 0;
   padding: 0;
 }
@@ -122,10 +130,16 @@
 }
 
 @media screen and (max-width: 1004px) {
-  .card__img {
+  .card__img-container {
     width: 339px;
     height: 190px;
   }
+
+  /* .card__img {
+    width: 339px;
+    height: 190px;
+  } */
+
   .card__caption {
     padding: 25px 0 0;
   }
@@ -144,10 +158,17 @@
   .card {
     width: 300px;
   }
-  .card__img {
+
+  .card__img-container {
     width: 300px;
     height: 168px;
   }
+
+  /* .card__img {
+    width: 300px;
+    height: 168px;
+  } */
+
   .card__caption {
     padding-top: 16px;
   }
