--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -72,6 +72,10 @@
   padding: 0;
 }
 
+.profile__form-submit-btn_disabled {
+  opacity: 0.6;
+}
+
 .profile__form-submit-btn:hover {
   cursor: pointer;
   background-color: #e8e8e8;
