fix: disabled submit buttons fixed

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -69,12 +69,12 @@
   transition: opacity 0.3s linear;
 }
 
-.form__button:hover {
+.form__button_active:hover {
   cursor: pointer;
   opacity: 0.6;
 }
 
-.form__button-disabled {
+.form__button_disabled {
   background-color: white;
   color: #a0a0a0;
   border: 1px solid #e8e8e8;
